Finalize acceptance fixes and platform-wide verification